User registered after john

--- a/project1/Frontend/dashboard.html
+++ b/project1/Frontend/dashboard.html
@@ -13,6 +13,9 @@
 
         <button id="get-never-logged-in-btn">Get Users Who Have Never Logged In</button>
         <div id="never-logged-in-users"></div>
+
+        <button id="search-after-john-btn">Search Users Registered After John</button>
+        <div id="users-registered-after-john"></div>
     </main>
     <script src="dashboard.js"></script>
 </body>
