--- a/project1/Frontend/dashboard.html
+++ b/project1/Frontend/dashboard.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <main>
+        <button id="logout-btn">Logout</button>
+        
         <h1>Welcome to the Dashboard</h1>
         <p>Manage User</p>
 
@@ -16,6 +18,12 @@
 
         <button id="search-after-john-btn">Search Users Registered After John</button>
         <div id="users-registered-after-john"></div>
+
+        <button id="search-same-day-john-btn">Search Users Registered on the Same Day as John</button>
+        <div id="users-registered-same-day-john"></div>
+
+        <button id="get-registered-today-btn">Get Users Registered Today</button>
+        <div id="users-registered-today"></div>
     </main>
     <script src="dashboard.js"></script>
 </body>
