--- a/project1/Frontend/dashboard.html
+++ b/project1/Frontend/dashboard.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet.css">
     <title>Dashboard</title>
 </head>
 <body>
@@ -12,8 +11,26 @@
         
         <h1>Welcome to the Dashboard</h1>
         <p>Manage User</p>
+        
+        <!-- Form for submitting a request for a quote -->
+        <h2>Submit a Request for a Quote</h2>
+        <form id="quote-request-form">
+            <label for="property-address">Property Address:</label>
+            <input type="text" id="property-address" required><br>
 
+            <label for="square-feet">Square Feet of the Driveway:</label>
+            <input type="number" id="square-feet" required><br>
+
+            <label for="proposed-price">Proposed Price:</label>
+            <input type="number" id="proposed-price" step="0.01"><br>
+
+            <label for="note">Note:</label>
+            <textarea id="note"></textarea><br>
+
+            <button type="button" id="submit-quote-btn">Submit Request for Quote</button>
+        </form>
+
+        <script src="dashboard.js"></script>
     </main>
-    <script src="dashboard.js"></script>
 </body>
 </html>
