--- a/project1/Frontend/davidsmithdashboard.html
+++ b/project1/Frontend/davidsmithdashboard.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <main>
-        <h1>Welcome, David Smith</h1>
+        <header>
+            <h1>Welcome, David Smith!</h1>
+            <button id="logout-btn">Logout</button>
+        </header>
         <h2>Pending Quote Requests</h2>
 
         <table id="quote-requests-table">
