--- a/project1/Frontend/dashboard.html
+++ b/project1/Frontend/dashboard.html
@@ -30,6 +30,30 @@
             <button type="button" id="submit-quote-btn">Submit Request for Quote</button>
         </form>
 
+        <h2>Your Requests</h2>
+            <table id="client-requests-table">
+                <thead>
+                    <tr>
+                        <th>Quote ID</th>
+                        <th>Property Address</th>
+                        <th>Square Feet</th>
+                        <th>Proposed Price</th>
+                        <th>Note</th>
+                        <th>Status</th>
+                        <th>Details</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+
+<!-- Section to display details of a selected request -->
+<section id="quote-result-section" style="display: none; margin-top: 20px;">
+    <h3>Quote Details</h3>
+    <div id="quote-details"></div>
+</section>
+
+
+
         <script src="dashboard.js"></script>
     </main>
 </body>
