Client can reply quote

--- a/project1/Frontend/dashboard.html
+++ b/project1/Frontend/dashboard.html
@@ -50,6 +50,15 @@
 <section id="quote-result-section" style="display: none; margin-top: 20px;">
     <h3>Quote Details</h3>
     <div id="quote-details"></div>
+    <div id="quote-actions" style="margin-top: 10px;">
+        <button id="accept-quote-btn">Accept</button>
+        <button id="reject-quote-btn">Reject</button>
+        <button id="negotiate-quote-btn">Negotiate</button>
+    </div>
+    <div id="negotiate-form" style="display: none; margin-top: 10px;">
+        <textarea id="negotiate-note" placeholder="Enter your negotiation note here"></textarea><br>
+        <button id="submit-negotiate-btn">Submit Negotiation Note</button>
+    </div>
 </section>
 
 
