--- a/project1/Frontend/dashboard.html
+++ b/project1/Frontend/dashboard.html
@@ -61,6 +61,20 @@
         <button id="submit-negotiate-btn">Submit Negotiation Note</button>
     </div>
 </section>
+        <h2>Your Bills</h2>
+        <table id="client-bills-table">
+            <thead>
+                <tr>
+                    <th>Bill ID</th>
+                    <th>Quote ID</th>
+                    <th>Property Address</th>
+                    <th>Price</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+
 
 
 
