--- a/project1/Frontend/davidsmithdashboard.html
+++ b/project1/Frontend/davidsmithdashboard.html
@@ -91,6 +91,32 @@
                     <tbody></tbody>
                 </table>
 
+                <h2>Bills with Client Notes</h2>
+                    <table id="bills-with-notes-table">
+                        <thead>
+                            <tr>
+                                <th>Bill ID</th>
+                                <th>Client Name</th>
+                                <th>Property Address</th>
+                                <th>Price</th>
+                                <th>Client Note</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+
+                    <h2>Generate Revenue</h2>
+                        <div id="revenue-section">
+                            <label for="start-date">Start Date:</label>
+                            <input type="date" id="start-date" required>
+                            <label for="end-date">End Date:</label>
+                            <input type="date" id="end-date" required>
+                            <button id="calculate-revenue-btn">Calculate Revenue</button>
+                            <p id="revenue-result"></p>
+                        </div>
+
+
+
 
 
         <script src="davidsmithdashboard.js"></script>
