--- a/project1/Frontend/davidsmithdashboard.html
+++ b/project1/Frontend/davidsmithdashboard.html
@@ -10,6 +10,7 @@
     <main>
         <header>
             <h1>Welcome, David Smith!</h1>
+            <button id="root-btn">Root</button>
             <button id="logout-btn">Logout</button>
         </header>
         <h2>Pending Quote Requests</h2>
